<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/bg">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp"
            >
            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@color/grey_text"
                android:textStyle="bold"
            />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sub_header"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/grey_text"
                />
          <com.google.android.material.textfield.TextInputLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="15sp"
              style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
              >

              <androidx.appcompat.widget.AppCompatEditText
                  android:id="@+id/nameField"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:foregroundTint="#000000"
                  android:hint="@string/placeholder"
                  android:textColor="@color/grey_text"
                  android:textColorHint="@color/placeholder_text" />
          </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/start_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Button_Text"
                android:backgroundTint="@color/purple_700"
                android:layout_marginTop="10sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingVertical="10sp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>