<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Result"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20sp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/result_header"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:textSize="40sp"
    android:textStyle="bold"
    android:textAlignment="center"
    />
    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="80sp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#D8D8D8"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="20sp"
        />
    <ImageView
        android:id="@+id/trophy"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:src="@drawable/trophy"
        android:layout_marginTop="20sp"
        android:contentDescription="@string/trophy"
        android:visibility="gone"
        />
    <TextView
        android:id="@+id/congrats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/congrats_username"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:gravity="center"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again"
        android:padding="15dp"
        android:layout_marginTop="20sp"
        />
    </LinearLayout>
    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/Confetti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</FrameLayout>