<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".QuizQuestion"
    android:scrollbars="none"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    tools:ignore="UseCompoundDrawables">
    <TextView
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:gravity="center"
        android:textSize="22sp"
        android:paddingHorizontal="16dp"

        />
    <ImageView
        android:id="@+id/person_logo"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/person"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/simple_person_image"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp"
        >
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="0dp"
            android:animationResolution="300"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="4"
            android:minHeight="10dp"
            android:progress="0"
            android:progressBackgroundTint="@color/purple_200"
            android:progressTint="@color/purple_700"
            android:indeterminate="false"
            />
        <TextView
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="15dp"
            android:textColor="@color/grey_text"
            />
    </LinearLayout>
<!--    <include-->
<!--        layout="@layout/option_layout"-->
<!--        android:id="@+id/options"-->
<!--        />-->
    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />
<Button
    android:id="@+id/submit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15sp"
    android:backgroundTint="@color/purple_500"
    android:paddingVertical="15sp"
    android:text="@string/submit"
    android:textColor="@color/white" />
</LinearLayout>
</ScrollView>